# Football-Image-Processing-with-OpenCV

./: .gitignore  LICENSE  README.md  main.py  metrics.txt  pyproject.toml  requirement.txt  yolo_inference.py
camera_movement_estimator/: camera_movement_estimator.py
development_and_analysis/: color_assignement.ipynb
player_ball_assigner/: player_ball_assigner.py
speed_and_distance_estimator/: speed_and_distance_estimator.py
stubs/: track_stubs.pkl
team_assigner/: __init__.py  team_assigner.py
trackers/: tracker.py
training/: football_training.ipynb  train_player_dectection.ipynb
training/football-players-detection-14/: README.roboflow.txt
utils/: bbox_utils.py  video_utils.py
view_transformer/: view_transformer.py
