[project]
name = "football-image-processing-with-opencv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core AI / Deep Learning
    "ultralytics>=8.0.0,<9.0.0",

    # CV pipeline utilities
    "supervision>=0.6.0,<1.0.0",

    # Image & video processing
    "opencv-python>=4.8.0,<5.0.0",

    # Numerical computing
    "numpy>=1.24.0,<2.0.0",

    # Data analysis
    "pandas>=1.5.0,<3.0.0",

    # Visualization
    "matplotlib>=3.7.0,<4.0.0" 

]
